--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hypixel UUID Viewer</h1>
+        <h1>UUID Viewer</h1>
         <input type="text" id="username" placeholder="Enter Minecraft Username">
         <button id="fetch-btn">Fetch UUID</button>
         <div id="uuid-data"></div>
