--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             */
         if (data) {
             document.getElementById('uuid-data').innerHTML = `
-                <h2>${data}</h2>
+                <h2>${JSON.stringify(data)}</h2>
             `;
         } else {
             document.getElementById('uuid-data').innerHTML = "User not found.";
