--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     }
 
     try {
-        const response = await fetch(`https://api.ashcon.app/mojang/v2/user/${username}`);
+        const response = await fetch(`https://api.mojang.com/users/profiles/minecraft/${username}`);
         const data = await response.json();
 
         /*if (data && data.id) {
