--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     }
 
     try {
-        const response = await fetch(`https://api.mojang.com/users/profiles/minecraft/${username}`);
+        const response = await fetch(`https://api.ashcon.app/mojang/v2/user/${username}`);
         const data = await response.json();
 
         /*if (data && data.id) {
@@ -34,6 +34,8 @@
             */
         if (data) {
             document.getElementById('uuid-data').innerHTML = `
+                <h2>UUID: ${data.uuid}</h2>
+                <h2>IGN: ${data.username}</h2>
                 <h2>${JSON.stringify(data)}</h2>
             `;
         } else {
