--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             document.getElementById('uuid-data').innerHTML = `
                 <h2>UUID: ${data.uuid}</h2>
                 <h2>IGN: ${data.username}</h2>
+                <h2>Skin: ${data.textures.skin.url}</h2>
                 <h2>${JSON.stringify(data)}</h2>
             `;
         } else {
