--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@
             `;
             */
         if (data) {
-            document.getElementById('uuid-data').innerHTML = `
+            const headImageUrl = `https://minecraft-heads.com/head/${uuid}`;
+                document.getElementById('playerHead').src = headImageUrl;
+                document.getElementById('playerHead').style.display = 'block';
+                document.getElementById('uuid-data').innerHTML = `
+                
                 <h2>UUID: ${data.uuid}</h2>
-                <h2>IGN: ${data.username}</h2>
+                <h2>IGN: <img id="playerHead" src="https://minecraft-heads.com/head/${data.uuid}" alt="${data.username}'s head" style="display:none;">${data.username}</h2>
                 <h2>Skin: ${data.textures.skin.url}</h2>
                 <h2>${JSON.stringify(data)}</h2>
             `;
