--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
                 document.getElementById('playerHead').src = headImageUrl;
                 document.getElementById('playerHead').style.display = 'block';
                 document.getElementById('uuid-data').innerHTML = `
-                
+                <button onclick="loadSkin(data.uuid)">Load Skin</button>
+                <img id="playerHead" src="" alt="Player Head" style="display:none;">
                 <h2>UUID: ${data.uuid}</h2>
-                <h2>IGN: <img id="playerHead" src="https://minecraft-heads.com/head/${data.uuid}" alt="${data.username}'s head" style="display:none;">${data.username}</h2>
+                <h2>IGN: ${data.username}</h2>
                 <h2>Skin: ${data.textures.skin.url}</h2>
                 <h2>${JSON.stringify(data)}</h2>
             `;
@@ -50,7 +51,11 @@
         document.getElementById('uuid-data').innerHTML = "An error occurred.";
     }
 });
-
+    function loadSkin() {
+        const headImageUrl = `https://minecraft-heads.com/head/${uuid}`;
+                document.getElementById('playerHead').src = headImageUrl;
+                document.getElementById('playerHead').style.display = 'block';
+    }
     </script>
 </body>
 </html>
