--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hypixel UUID Viewer</title>
+    <title>SU</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>UUID Viewer</h1>
+        <h1>UUID and Skin Viewer</h1>
         <input type="text" id="username" placeholder="Enter Minecraft Username">
         <button id="fetch-btn">Fetch UUID</button>
         <div id="uuid-data"></div>
