--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <h2>UUID: ${data.uuid}</h2>
                 <h2>IGN: ${data.username}</h2>
                 <h3>from url: ${urlData}</h3>
+                <h3>from url: ${window.location.search}</h3>
             `;
         } else {
             document.getElementById('uuid-data').innerHTML = "User not found.";
