--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SU</title>
-    <link rel="stylesheet" href="css/main.css">
+    <title>Jerry's Hub</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <div class="container">
@@ -13,6 +13,6 @@
         <button id="fetch-btn">Get stats</button>
         <div id="stats"></div>
     </div>
-    <script src="js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
