--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         <button id="fetch-btn">Get stats</button>
         <div id="stats"></div>
     </div>
-    <script src="/js/main.js"></script>
+    <script src="/public/js/main.js"></script>
 </body>
 </html>
