--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jerry's Hub</title>
-    <link rel="stylesheet" href="/public/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <div class="container">
@@ -13,6 +13,6 @@
         <button id="fetch-btn">Get stats</button>
         <div id="stats"></div>
     </div>
-    <script src="/public/js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
