--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Test</h1>
+        <h1>Test 1</h1>
         <input type="text" id="username" placeholder="Enter Minecraft Username">
         <button id="fetch-btn">Get stats</button>
         <div id="stats"></div>
