--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
     <link rel="stylesheet" href="/public/CSS/main.css">
 </head>
 <body>
+    <noscript>Please enable javascript.</noscript>
     <div class="container">
-        <h1>Test 1</h1>
-        <input type="text" id="username" placeholder="Enter Minecraft Username">
-        <button id="fetch-btn">Get stats</button>
-        <div id="stats"></div>
     </div>
     <script src="/public/js/main.js"></script>
 </body>
