--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <noscript>Please enable javascript.</noscript>
-    <div class="container">
+    <div id="main" class="container">
     </div>
     <script src="/public/js/main.js"></script>
 </body>
