--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/public/CSS/main.css">
 </head>
 <body>
+    <img src="/public/img/hub2.png" id="background">
     <noscript>Please enable javascript.</noscript>
     <div id="main" class="container">
     </div>
