--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="/public/CSS/main.css">
 </head>
 <body>
-    <img src="/public/img/hub2.png" id="background">
+    <div class="bbox">
+        <img src="/public/img/hub2.png" id="background">
+    </div>
     <noscript>Please enable javascript.</noscript>
     <div id="main" class="container">
     </div>
