--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="bbox">
-        <img src="/public/img/hub2.png" id="background">
+        <img src="/public/img/hub2.png" id="background" width="100%" height="100%">
     </div>
     <noscript>Please enable javascript.</noscript>
     <div id="main" class="container">
