--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
     <link rel="stylesheet" href="/public/CSS/main.css">
 </head>
 <body>
-    <div class="bbox">
-        <img src="/public/img/hub2.png" id="background" width="110%" height="110%">
-    </div>
-    <noscript>Please enable javascript.</noscript>
-    <div id="main" class="container">
-    </div>
+    <div class="background-blur"></div>
+    <div id="main" class="content"></div>
     <script src="/public/js/main.js"></script>
 </body>
 </html>
