--- a/public/bazaar/bazaar.html
+++ b/public/bazaar/bazaar.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jerry's Hub</title>
+    <link rel="stylesheet" href="/public/CSS/main.css">
+</head>
+<body>
+    <div class="background-blur"></div>
+    <div id="main" class="content"></div>
+    <script src="/public/bazaar/bz.js"></script>
+</body>
+</html>
