--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/index.css">
-    <title>Jerry's Hub | Home</title>
+    <title>Jerry's Hub</title>
+    <link rel="stylesheet" href="/public/CSS/main.css">
 </head>
 <body>
-    <h1>Welcome to Jerry's Hub!</h1>
-    <script src="scripts/index.js"></script>
+    <div class="background-blur"></div>
+    <div id="main" class="content"></div>
+    <script src="/public/js/main.js"></script>
 </body>
 </html>
