--- a/public/bazaar/bazaar.html
+++ b/public/bazaar/bazaar.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jerry's Hub</title>
     <link rel="stylesheet" href="/public/CSS/main.css">
+    <link rel="icon" type="image/png" href="/public/img/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/public/img/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/public/img/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/public/img/favicon/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Jerry's Hub" />
+    <link rel="manifest" href="/public/img/favicon/site.webmanifest" />
 </head>
 <body>
     <div class="background-blur"></div>
