--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 <body>
     <div class="background-blur"></div>
     <div id="main" class="content"></div>
-    <script src="/public/js/main.js"></script>
+    <script src="/main.js"></script>
 </body>
 </html>
