--- a/public/ah/auction.html
+++ b/public/ah/auction.html
@@ -16,7 +16,6 @@
 <body>
     <div class="background-blur"></div>
     <div id="main" class="content"></div>
-    <script src="https://raw.githubusercontent.com/smelly08/mcgui-html/refs/heads/main/script.js"></script>
-    <script src="/public/ah/auction.js"></script>
+    <script type="module" src="/public/ah/auction.js"></script>
 </body>
 </html>
