--- a/public/ah/auction.html
+++ b/public/ah/auction.html
@@ -17,6 +17,6 @@
     <div class="background-blur"></div>
     <div id="main" class="content"></div>
     <script src="/public/js/gui.js"></script>
-    <script type="module" src="/public/ah/auction.js"></script>
+    <script src="/public/ah/auction.js"></script>
 </body>
 </html>
