--- a/public/ah/auction.html
+++ b/public/ah/auction.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jerry's Hub</title>
     <link rel="stylesheet" href="/public/CSS/main.css">
+    <link rel="stylesheet" href="/public/CSS/gui.css">
     <link rel="stylesheet" href="https://raw.githubusercontent.com/smelly08/mcgui-html/refs/heads/main/styles.css">
     <link rel="icon" type="image/png" href="/public/img/favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/public/img/favicon/favicon.svg" />
