--- a/public/bazaar/bazaar.html
+++ b/public/bazaar/bazaar.html
@@ -16,6 +16,6 @@
     <div class="background-blur"></div>
     <div id="main" class="content"></div>
     <script src="/public/js/all.js"></script>
-    <script src="/public/bazaar/bz.js"></script>
+    <script type="module" src="/public/bazaar/bz.js"></script>
 </body>
 </html>
