--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jerry's Hub</title>
     <link rel="stylesheet" href="/public/CSS/main.css">
+    <link rel="stylesheet" href="/public/CSS/gui.css">
     <link rel="icon" type="image/png" href="/public/img/favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/public/img/favicon/favicon.svg" />
     <link rel="shortcut icon" href="/public/img/favicon/favicon.ico" />
@@ -16,5 +17,6 @@
     <div class="background-blur"></div>
     <div id="main" class="content"></div>
     <script src="/main.js"></script>
+    <script src="/gui.js"></script>
 </body>
 </html>
