--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="background-blur"></div>
     <div id="main" class="content"></div>
+    <script src="/public/js/gui.js"></script>
     <script src="/main.js"></script>
-    <script src="/gui.js"></script>
 </body>
 </html>
